<resources>
    <string name="app_name">IPApplication</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_popular">Popular</string>
    <string name="title_activity_top_rated">TopRated</string>
    <string name="map_button">Map</string>
    <string name="news_button">News</string>
    <string name="queue_button">Queue</string>
    <string name="social_button">Social</string>
    <string name="sport_button">Sport</string>
    <string name="title_activity_email">Email</string>
    <string name="title_activity_map">Map</string>
    <string name="action_signout">Sign out</string>
    <string name="title_activity_travel">Travel</string>
    <string name="title_activity_social">Social</string>
    <string name="title_activity_food">Food</string>
    <string name="title_activity_library">Library</string>

    <string name="add_textbox_hint">Add a ToDo item</string>
    <string name="add_button_text">Add</string>
    <string name="service_title">Mobile Apps </string>
    <string name="checkbox_text">Item Text</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">activity_home</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="mail">Mail</string>
    <string name="map">Map</string>
    <string name="news">News</string>
    <string name="new_icons_string">New</string>
    <string name="popular">Popular</string>

</resources>
