<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:screenOrientation="sensorPortrait">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView3"
            android:layout_gravity="center_horizontal|top"
            android:fillViewport="false"
            android:nestedScrollingEnabled="false"
            android:visibility="visible"
            android:layout_weight="1" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:useDefaultMargins="true"
                    android:id="@+id/gridLayout2"
                    android:gravity="center"
                    android:stretchColumns="4,3"
                    android:rowOrderPreserved="false"
                    android:columnOrderPreserved="false" >

                    <Button
                        android:id="@+id/button"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:background="@drawable/mapicon4"
                        android:onClick="onMapClick"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_rowSpan="1"
                        android:layout_columnSpan="1"
                        android:layout_gravity="center|fill"
                        android:layout_margin="10sp"
                        android:text="@string/map_button"
                        android:textColor="#ffffff"
                        android:gravity="center_horizontal|bottom"
                        android:singleLine="false"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:elegantTextHeight="false" />

                    <Button
                        android:id="@+id/button2"
                        android:text="Timetable"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:onClick="onTimetableClick"
                        android:background="@drawable/timetableicon"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center"
                        android:layout_margin="10sp"
                        android:textColor="#ffffff"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:nestedScrollingEnabled="false" />

                    <Button
                        android:id="@+id/button3"
                        android:text="@string/news_button"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:background="@drawable/newsicon"
                        android:layout_row="0"
                        android:layout_column="2"
                        android:singleLine="false"
                        android:layout_rowSpan="1"
                        android:layout_gravity="center|fill"
                        android:gravity="center_horizontal|bottom"
                        android:layout_columnSpan="1"
                        android:layout_margin="10sp"
                        android:textColor="#ffffff"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1" />

                    <Button
                        android:id="@+id/button4"
                        android:text="Food"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:background="@drawable/foodicon"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_gravity="center|fill"
                        android:gravity="center_horizontal|bottom"
                        android:layout_margin="10sp"
                        android:textColor="#ffffff"
                        android:layout_columnSpan="1"
                        android:layout_rowSpan="1"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:onClick="onFoodClick" />

                    <Button
                        android:id="@+id/button5"
                        android:text="Email"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:onClick="onEmailClick"
                        android:background="@drawable/emailicon"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_gravity="center|fill"
                        android:gravity="center_horizontal|bottom"
                        android:layout_margin="10sp"
                        android:textColor="#ffffff"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1" />

                    <Button
                        android:id="@+id/button8"
                        android:text="Travel"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:onClick="onTravelClick"
                        android:background="@drawable/travelicon3"
                        android:layout_row="1"
                        android:layout_column="2"
                        android:textColor="#ffffff"
                        android:layout_gravity="center|fill"
                        android:gravity="center_horizontal|bottom"
                        android:nestedScrollingEnabled="false"
                        android:layout_margin="10sp"
                        android:layout_columnSpan="1"
                        android:layout_rowSpan="1"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1" />

                    <Button
                        android:id="@+id/button9"
                        android:text="Library"
                        android:textSize="15sp"
                        android:background="@drawable/libraryicon"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:layout_row="2"
                        android:layout_column="2"
                        android:nestedScrollingEnabled="false"
                        android:layout_gravity="center|fill"
                        android:gravity="center_horizontal|bottom"
                        android:textColor="#ffffff"
                        android:layout_margin="10sp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1" />

                    <Button
                        android:id="@+id/button10"
                        android:text="@string/queue_button"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:background="@drawable/queueicon"
                        android:layout_row="3"
                        android:layout_column="2"
                        android:layout_gravity="center|fill"
                        android:gravity="center_horizontal|bottom"
                        android:layout_margin="10sp"
                        android:textColor="#ffffff"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1" />

                    <Button
                        android:id="@+id/button11"
                        android:text="Events"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:background="@drawable/eventicon2"
                        android:layout_row="4"
                        android:layout_column="0"
                        android:layout_gravity="center|fill"
                        android:gravity="center_horizontal|bottom"
                        android:nestedScrollingEnabled="false"
                        android:textColor="#ffffff"
                        android:layout_columnSpan="1"
                        android:layout_rowSpan="1"
                        android:layout_margin="10sp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1" />

                    <Button
                        android:id="@+id/button13"
                        android:text="@string/social_button"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:background="@drawable/socialicon"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:layout_gravity="center|fill"
                        android:gravity="center_horizontal|bottom"
                        android:textColor="#ffffff"
                        android:layout_margin="10sp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1" />

                    <Button
                        android:id="@+id/button14"
                        android:text="@string/sport_button"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:background="@drawable/sporticon2"
                        android:layout_row="2"
                        android:layout_column="1"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center|fill"
                        android:layout_margin="10sp"
                        android:textColor="#00398D"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1" />

                    <Button
                        android:id="@+id/button15"
                        android:text="Radio"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:background="@drawable/radio"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:layout_gravity="center|fill"
                        android:gravity="center_horizontal|bottom"
                        android:layout_margin="10sp"
                        android:textColor="#ffffff"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1" />

                    <Button
                        android:id="@+id/button16"
                        android:text="ATM"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:background="@drawable/timetableicon"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:layout_gravity="center|fill"
                        android:gravity="center_horizontal|bottom"
                        android:layout_margin="10sp"
                        android:layout_rowSpan="1"
                        android:layout_columnSpan="1"
                        android:textColor="#ffffff"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1" />

                    <Button
                        android:id="@+id/button17"
                        android:text="+"
                        android:textSize="15sp"
                        android:layout_width="@dimen/box_size"
                        android:layout_height="@dimen/box_size"
                        android:layout_row="4"
                        android:layout_column="1"
                        android:layout_gravity="center|fill"
                        android:background="#191c65"
                        android:textColor="#ffffff"
                        android:layout_margin="10sp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1" />
                </GridLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
