<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tom.smally.activity_home$PlaceholderFragment"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#ebebeb">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:screenOrientation="sensorPortrait"
        android:backgroundTint="#c6c6c6"
        android:backgroundTintMode="screen"
        android:background="@drawable/bathcampus"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView3"
            android:layout_gravity="center_horizontal|top"
            android:fillViewport="false"
            android:nestedScrollingEnabled="false"
            android:visibility="visible"
            android:layout_weight="1"
            android:scrollIndicators="none">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:scrollIndicators="none"
                android:showDividers="beginning|middle|end">
                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#71BCFA"
                    android:padding="6dip" >

                    <TextView
                        android:id="@+id/textViewTitle"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="0.12"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <ProgressBar
                        android:id="@+id/loadingProgressBar"
                        android:layout_width="28dp"
                        android:layout_height="28dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#71BCFA"
                    android:padding="6dip"  >

                    <EditText
                        android:id="@+id/textNewToDo"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/add_textbox_hint" >

                        <requestFocus />
                    </EditText>

                    <Button
                        android:id="@+id/buttonAddToDo"
                        android:layout_width="64dip"
                        android:layout_height="wrap_content"
                        android:onClick="addItem"
                        android:text="@string/add_button_text" />

                </LinearLayout>

                <ListView
                    android:id="@+id/listViewToDo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/row_list_to_do"
                    android:padding="6dip">

                </ListView>
                -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/popular"
                    android:id="@+id/textView5"
                    android:layout_gravity="start"
                    android:layout_margin="5sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="12sp"
                    android:id="@+id/imageView8"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/actionbar" />

                <android.support.constraint.ConstraintLayout
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left"
                    android:showDividers="middle">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:onClick="onEmailClick"
                        android:clickable="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="8dp"
                        android:id="@+id/linearLayout8">

                        <Button
                            android:id="@+id/button5"
                            android:textSize="15sp"
                            android:layout_width="@dimen/box_size"
                            android:layout_height="@dimen/box_size"
                            android:background="@drawable/emailicon"
                            android:layout_row="1"
                            android:layout_column="1"
                            android:layout_gravity="center"
                            android:gravity="center_horizontal|bottom"
                            android:textColor="#ffffff"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:onClick="onEmailClick"
                            android:clickable="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/mail"
                            android:id="@+id/textView7"
                            android:gravity="bottom"
                            android:layout_gravity="center_horizontal|bottom"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:clickable="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:onClick="onTimetableClick"
                        android:gravity="center_horizontal"
                        android:clickable="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toRightOf="@+id/linearLayout8"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="8dp"
                        android:id="@+id/linearLayout9">

                        <Button
                            android:id="@+id/button18"
                            android:textSize="15sp"
                            android:layout_width="@dimen/box_size"
                            android:layout_height="@dimen/box_size"
                            android:background="@drawable/timetableicon"
                            android:layout_row="0"
                            android:layout_column="1"
                            android:gravity="center_horizontal|bottom"
                            android:textColor="#ffffff"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:nestedScrollingEnabled="false"
                            android:layout_gravity="center"
                            android:onClick="onTimetableClick"
                            android:clickable="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="Timetable"
                            android:id="@+id/textView3"
                            android:gravity="bottom"
                            android:layout_gravity="center_horizontal|bottom"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:clickable="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        app:layout_constraintLeft_toRightOf="@+id/linearLayout9"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="8dp">

                        <Button
                            android:id="@+id/button6"
                            android:textSize="15sp"
                            android:layout_width="@dimen/box_size"
                            android:layout_height="@dimen/box_size"
                            android:background="@drawable/mapicon4"
                            android:onClick="onMapClick"
                            android:layout_gravity="center"
                            android:textColor="#ffffff"
                            android:gravity="center_horizontal|bottom"
                            android:singleLine="false"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/map"
                            android:id="@+id/textView9"
                            android:gravity="bottom"
                            android:layout_gravity="center_horizontal|bottom"
                            android:layout_weight="1"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                        <Button
                            android:id="@+id/button12"
                            android:textSize="15sp"
                            android:layout_width="@dimen/box_size"
                            android:layout_height="@dimen/box_size"
                            android:background="@drawable/newsicon"
                            android:layout_row="0"
                            android:layout_column="2"
                            android:singleLine="false"
                            android:layout_rowSpan="1"
                            android:layout_gravity="center"
                            android:gravity="center_horizontal|bottom"
                            android:layout_columnSpan="1"
                            android:textColor="#ffffff"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/news"
                            android:id="@+id/textView10"
                            android:gravity="bottom"
                            android:layout_gravity="center_horizontal|bottom"
                            android:layout_weight="1"
                            android:textSize="20sp" />
                    </LinearLayout>

                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/new_icons_string"
                    android:id="@+id/textView18"
                    android:layout_gravity="start"
                    android:layout_margin="5sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="12sp"
                    android:id="@+id/imageView18"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/actionbar"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/horizontalScrollView5"
                    android:layout_gravity="left"
                    android:scrollIndicators="none"
                    android:scrollbars="none">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left">

                        <Button
                            android:id="@+id/button17"
                            android:text="+"
                            android:textSize="15sp"
                            android:layout_width="@dimen/box_size"
                            android:layout_height="@dimen/box_size"
                            android:layout_row="4"
                            android:layout_column="1"
                            android:layout_gravity="center"
                            android:background="#191c65"
                            android:textColor="#ffffff"
                            android:layout_margin="10sp"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1" />
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
